<resources>
    <string name="app_name">Euforia</string>
    <string name="ok">ОК</string>
    <string name="error">Error</string>
    <string name="loading">Loading…</string>
    <string name="cancel">Cancel</string>
    <string name="text_load_again">Try again</string>
    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete all</string>
    <string name="select_all">Select all</string>
    <string name="select">Select</string>
    <string name="deselect">Deselect</string>
    <string name="download">Download</string>
    <string name="restore">Restore</string>
    <string name="settings">Preferences</string>
    <string name="rename">Rename</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="done">Done</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="copied">Copied</string>
    <string name="report_error">Report an error</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="unsaved_changes_title">Unsaved changes</string>
    <string name="unsaved_changes_message">Do you want to save changes before leaving this scene?</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
    <string name="edit">Edit</string>
    <string name="continue_">Continue</string>
    <string name="sent_success">Successfully sent</string>
    <string name="preparing_link">Creating a link</string>
    <string name="copy_link">Copy link</string>
    <string name="link_copied">Link copied to clipboard</string>
    <string name="skip">Skip</string>
    <string name="timer">Timer</string>
    <string name="soon">Soon</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>
    <string name="copyright">© Euforia Digital LLC 2021–2025</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="setup_language">Setup language…</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="read_more">See more</string>
    <string name="faq">FAQs</string>
    <string name="debug_information">Device Logs</string>
    <string name="debug_information_share">Send to Support</string>
    <string name="data_store_commit_error_message">Failed to save changes. Please check the available space on your device.</string>
    <string name="call_error_message">This feature can only be used on the iPhone</string>
    <string name="send_email_error_message">Error sending email. Please verify your email settings and try again.</string>
    <string name="support_email_subject">Support Euforia %1$s</string>
    <string name="text_link_not_created">Failed to create link. Please check the connection.</string>
    <string name="text_support_not_created">Failed to send a request. Please review the message and try again.</string>
    <string name="app_critical_update_alert_title">New Update Available</string>
    <string name="app_critical_update_alert_message">Exciting updates await in Euforia! For the best experience and to continue enjoying our services, please upgrade to the latest version of the app.</string>
    <string name="app_critical_update_alert_update">Update</string>
    <string name="request_permissions_notifications_title">Turn on notifications</string>
    <string name="request_permissions_notifications_text">To enhance your Euforia experience, please grant the app permission to send notifications</string>
    <string name="request_permissions_notifications_button">Allow Notifications</string>
    <string name="request_permissions_notifications_skip">Later</string>
    <string name="notification_permissions_banner_title">Turn on notifications</string>
    <string name="notification_permissions_banner_text">To enhance your Euforia experience, please grant the app permission to send notifications</string>
    <string name="enter_email_alert_title">Email</string>
    <string name="enter_email_alert_message">Your email is required for feedback, support, and important announcements and will be kept secret from anybody else</string>
    <string name="go_to_downloads">Downloads</string>
    <string name="no_internet_connection_title">No Internet Connection</string>
    <string name="no_internet_connection_message">Check Downloads to access material offline on your device</string>
    <string name="failed_load_data_title">Failed to Load Data</string>
    <string name="resource_not_found_empty_text">Not Found</string>
    <string name="no_data_empty_text">No Data</string>
    <string name="get_euforia_max">Upgrade to Euforia MAX</string>
    <string name="feedback_support_title">Support</string>
    <string name="feedback_support_subtitle">Please get in touch with us if there\'re any issues with the app</string>
    <string name="feedback_report_title">Report an error</string>
    <string name="feedback_report_subtitle">We appreciate your help in improving the quality of the app. Please let us know about any errors you have noticed, and we will do our best to correct them as soon as possible.</string>
    <string name="feedback_impression_title">Submit a question</string>
    <string name="feedback_impression_subtitle">If you have any questions about the Euforia, feel free to get in touch with us</string>
    <string name="feedback_write_here">Message</string>
    <string name="feedback_or">or</string>
    <string name="feedback_extra">Contact us via email:</string>
    <string name="feedback_need_email">Please provide the valid email address for feedback</string>
    <string name="feedback_need_text">Please type in the text box</string>
    <string name="feedback_alert_title">Dear Euforia User</string>
    <string name="feedback_alert_message">Help us improve. Please complete a brief feedback form regarding your app experience.</string>
    <string name="feedback_alert_write_button">Leave feedback</string>
    <string name="feedback_alert_later_button">Later</string>
    <string name="feedback_form_title">Feedback</string>
    <string name="feedback_form_description">Help us improve. Please complete a brief feedback form regarding your app experience.</string>
    <string name="feedback_form_send_button">Send</string>
    <string name="feedback_form_validation_text">Please answer all required (*) questions.</string>
    <string name="feedback_form_finish_title">Thank you 💛</string>
    <string name="feedback_form_finish_message">Your form has been submitted successfully</string>
    <string name="feedback_form_exit_confirm_title">Close Form</string>
    <string name="feedback_form_exit_confirm_message">End survey now? Entered data will be lost</string>
    <string name="feedback_form_not_found_empty_text">Not found</string>
    <string name="feedback_form_expiry_title">Time is over</string>
    <string name="feedback_form_expiry_message">This form is no longer valid</string>
    <string name="feedback_form_readonly_details">You have already answered the questions on this form.</string>
    <string name="feedback_form_refill_not_allowed_title">Error</string>
    <string name="feedback_form_refill_not_allowed_message">This form does not support refilling.</string>
    <string name="feedback_form_not_saved">Failed to send a request. Please review the information and try again.</string>
    <string name="personal_data_privacy">Privacy Policy</string>
    <string name="personal_data_usage">App Privacy Information (Play Market)</string>
    <string name="personal_data_clear">Clear App Data</string>
    <string name="personal_data_title">Clear App Data</string>
    <string name="personal_data_clear_details">This process will permanently delete all data created during your use of the app, including:\n– Name.\n– Your preferences and the survey results.\n– Browsing history and favorites.\n– Uploaded files, meditations, articles, exercises and soundscapes, including created soundscapes.\n– Recommendations and suggestions.\n– Other data and cache.\nThis process cannot be undone.</string>
    <string name="personal_data_delete">Delete Data</string>
    <string name="personal_data_clear_confirm_title">Deleting personal data</string>
    <string name="personal_data_clear_confirm_message">Are you sure you want to delete all data and restart Euforia?</string>
    <string name="subscriptions_managment">Billing &amp; Subscriptions</string>
    <string name="about_subscription">About In-App Purchases</string>
    <string name="update_subscriptions_state">Restore Purchases</string>
    <string name="manage_subscriptions">Manage Subscriptions</string>
    <string name="active_subscriptions">Active Subscription</string>
    <string name="active_subscription_status_text">Your subscription is active. Euforia Max will expire on %1$s.</string>
    <string name="active_subscription_default_name">Euforia Max</string>
    <string name="active_subscription_from_appstore">Purchased through the App Store</string>
    <string name="active_subscription_from_playmarket">Purchased through Google Play</string>
    <string name="ua_library_title">Бережіть себе 🇺🇦</string>
    <string name="ua_mode_enter_confirm_title">Euforia разом з Україною</string>
    <string name="ua_mode_enter_confirm_message">Для допомоги українцям під час воєнного стану додаток працює в особливому режимі, який надає тільки важливу інформацію.\n\nЯкщо Вам потрібна підтримка, натисніть «Перейти до особливого режиму». Якщо Ви хочете отримати доступ до основного функціоналу Euforia (Голос Euforia, медитації, йога, статті та ін.), оберіть іншу мову.</string>
    <string name="ua_mode_enter_continue">Перейти до особливого режиму</string>
    <string name="ua_mode_exit_confirm_title"></string>
    <string name="ua_mode_exit_confirm_message">Для виходу з особливого режиму та переходу до основного функціоналу Euforia необхідно змінити мову додатка та перезавантажити його. Продовжити?</string>
    <string name="ua_mode_menu_change_language">Змінити мову</string>
    <string name="ua_mode_menu_about">Про український контент</string>
    <string name="ua_mode_about_title">Український контент 🇺🇦</string>
    <string name="ua_mode_about_details">Контент Euforia створюється протягом кількох років, та навіть зараз, під час війни Росії проти України. Але саме в цей час нашою командою було прийнято рішення створити тимчасовий контент для користувачів з України, що відрізняється від матеріалів основного додатка. В ньому зроблено максимальний акцент на екстрену психологічну самодопомогу в критичних ситуаціях.\n\nЦей контент містить в собі наступні теми: «Війна та діти», «Війна та люди похилого віку» та багато іншої інформації, а також музичні сцени, які допоможуть зняти стрес та моральну напругу.\n\nЯкщо зараз Ви не потребуєте спеціального контенту допомоги або для того, щоб використовувати весь основний функціонал – Голос Euforia, медитації, йога-практику та статті, потрібно змінити мову додатка.</string>
    <string name="intro_gender_step_title">Who\'s the Therapy For?</string>
    <string name="intro_genter_unspecified">Prefer not to specify</string>
    <string name="intro_language_step_title">Preferred language</string>
    <string name="subscription_title">Start Loving Voice Therapy Today</string>
    <string name="premium_terms_text_small">Subscription automatically renews at the end of the current period. Cancel anytime on Google Play.</string>
    <string name="pro_popup_title">Subscription is now active</string>
    <string name="pro_popup_message">You have full access to the Premium content and features</string>
    <string name="button_continue">Continue</string>
    <string name="get_started">Get started</string>
</resources>