<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    tools:background="@color/colorDark20">

    <LinearLayout
        android:id="@+id/layoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/bg_dialog_layout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:fontFamily="@font/inter_regular"
            android:gravity="center_horizontal|bottom"
            android:maxLines="4"
            android:text="@string/pro_popup_title"
            android:textColor="#455650"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:fontFamily="@font/inter_regular"
            android:gravity="center_horizontal|top"
            android:maxLines="4"
            android:text="@string/pro_popup_message"
            android:textColor="#5E5E5E"
            android:textSize="@dimen/dialog_text_size" />
    </LinearLayout>

<!--    <ImageView-->
<!--        android:id="@+id/image"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:contentDescription="@string/tab_premium"-->
<!--        android:scaleType="fitCenter"-->
<!--        android:src="@drawable/img_dialog_thanks_elements" />-->

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="50dp"
        android:ellipsize="end"
        android:fontFamily="@font/inter_regular"
        android:maxLines="1"
        android:text="@string/button_continue"
        android:textColor="@color/colorWhite"
        android:textSize="17sp"
        android:textStyle="bold" />
</FrameLayout>