<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    style="@style/CoordinatorDefaultStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_subscription_8_bg">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <digital.euforia.app.ui.subscription.AspectRatioPlayerView
                android:id="@+id/video"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:ratio="0.66"
                app:use_controller="false" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="11dp"
                android:fontFamily="@font/inter_regular"
                android:gravity="start"
                android:includeFontPadding="false"
                android:maxLines="3"
                android:text="@string/subscription_title"
                android:textColor="#E6FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold"
                app:autoSizeMaxTextSize="24sp"
                app:autoSizeMinTextSize="16sp"
                app:autoSizeTextType="uniform" />

            <LinearLayout
                android:id="@+id/items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="250dp" />
        </LinearLayout>

    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/subscribeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:alpha="0"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000139"
            android:orientation="vertical">

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:elevation="0dp"
                android:gravity="center_horizontal"
                android:includeFontPadding="false"
                android:maxLines="2"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:visibility="gone"
                app:autoSizeMaxTextSize="15sp"
                app:autoSizeMinTextSize="11sp"
                app:autoSizeTextType="uniform"
                tools:text="Invest in your well-being and\nupgrade today"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/getPremium"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/background_button_white"
                android:elevation="8dp"
                android:fontFamily="@font/inter_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/get_started"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="22dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/inter_regular"
                android:gravity="center_horizontal"
                android:includeFontPadding="false"
                android:maxLines="2"
                android:text="@string/premium_terms_text_small"
                android:textColor="@color/colorIntroTerms"
                android:textSize="11sp"
                app:autoSizeMaxTextSize="12sp"
                app:autoSizeMinTextSize="8sp"
                app:autoSizeTextType="uniform" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@drawable/gradient_viewer_top" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:theme="@style/AppBarOverlay"
        app:elevation="0dp">

        <View
            android:id="@+id/statusBarOffsetView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/status_bar_height"
            app:layout_scrollFlags="noScroll" />

        <FrameLayout
            android:id="@+id/topBarLayout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_scrollFlags="noScroll">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="start|top"
                android:layout_margin="12dp"
                android:alpha="0.85"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/back"
                android:scaleX="0.9"
                android:scaleY="0.9"
                android:src="@drawable/ic_close"
                app:tint="@color/colorWhite" />
        </FrameLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/view_progress" />

    <include layout="@layout/view_subscription_processing" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>